unpackaged/objects/Session_Participant__c.object
<CustomObject>
  <description>Used for adding participants in sessions. Initially for Germany only</description>
  <fields>
    <fullName>CampaignMemberId__c</fullName>
    <label>Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Company__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Company</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Sessions</relationshipLabel>
    <relationshipName>Session_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Profession__c</fullName>
    <formula>TEXT(Contact__r.Profession__c)</formula>
    <label>Profession</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Session Participants</relationshipLabel>
    <relationshipName>Session_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Target_Type__c</fullName>
    <formula>TEXT(Contact__r.Target_Type__c )</formula>
    <label>Target Type</label>
    <type>Text</type>
  </fields>
  <label>Session Participant</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>Session Participant Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Session Participants</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>